# uniswapx-artemis

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  cdk.context.json  cdk.json  compose.yaml  package.json  pnpm-lock.yaml  start-filler.sh  start-liquidator.sh
.github/workflows/: prod.yaml  test.yml  workflow-deploy-backend.yaml
crates/bindings-uniswapx/: Cargo.toml
crates/bindings-uniswapx/src/: array_builder.rs  arraybuilder.rs  basereactor.rs  block_numberish.rs  blocknumberish.rs  byteslib.rs  cosigner_lib.rs  cosignerlib.rs  currency_library.rs  currencylibrary.rs  curve_builder.rs  curvebuilder.rs  deploy_dutch.rs  deploy_dutch_v2.rs  deploy_dutch_v3.rs  deploy_exclusive_dutch.rs  deploy_priority_order_reactor.rs  deploy_swap_router_02_executor.rs  deploydutch.rs  deploydutchv2.rs  deploydutchv3.rs  deployexclusivedutch.rs  deploymultifillerexecutor.rs  deploypermit2.rs  deploypriorityorderreactor.rs  deployswaprouter02executor.rs  deployuniversalrouterexecutor.rs  dutch_decay_lib.rs  dutch_order_lib.rs  dutch_order_reactor.rs  dutchdecaylib.rs  dutchorderlib.rs  dutchorderreactor.rs  ecdsa.rs  eip712.rs  erc20.rs  exclusive_dutch_order_lib.rs  exclusive_dutch_order_reactor.rs  exclusive_filler_validation.rs  exclusivedutchorderlib.rs  (+128 more)
crates/uniswapx-rs/: Cargo.toml
crates/uniswapx-rs/src/: lib.rs  order.rs  sol_math.rs
infrastructure/: backendCdk.ts  index.ts  liquidator.ts
infrastructure/constructs/backend/: backend.ts
infrastructure/shared/: cluster.ts
src/: lib.rs  main.rs  shared.rs
src/aws_utils/: cloudwatch_utils.rs  mod.rs
src/collectors/: block_collector.rs  uniswapx_order_collector.rs  uniswapx_route_collector.rs
src/executors/: dutch_executor.rs  mod.rs  priority_executor.rs  protect_executor.rs  public_1559_executor.rs  queued_executor.rs  reactor_error_code.rs
src/strategies/: dutchv3_strategy.rs  keystore.rs  mod.rs  priority_strategy.rs  shared.rs  types.rs  uniswapx_strategy.rs
