[package]
name = "uniswapx-artemis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniswapx-rs = { path = "./crates/uniswapx-rs" }
bindings-uniswapx = { path = "./crates/bindings-uniswapx" }
artemis-light = { path = "./lib/artemis-light" }
tokio = { version = "1.18", features = ["full"] }
dotenv = "0.15.0"
async-trait = "0.1.64"
futures = "0.3.27"
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.2.5", features = ["derive"] }
phyllo = "0.3.0"
serde = "1.0.168"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
tokio-stream = "0.1.14"
reqwest = { version = "0.11.18", features = ["json"] }
alloy = "0.13.0"
serde_qs = "0.12.0"
async-stream = "0.3.5"
mockito = "1.1.0"

# aws
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.47.0"
aws-sdk-secretsmanager = "1.43.0"
serde_json = "1.0.127"
dashmap = "6.1.0"
rand = "0.8.5"
ethabi = "18.0.0"
backoff = "0.4.0"
