[package]
name = "uniswapx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.8.20"
alloy-sol-types = "0.8.20"
alloy-dyn-abi = "0.8.20"
anyhow = "1.0.70"
hex = "0.4.3"
tracing = "0.1"
